--- a/src/components/Comment/CommentLine/index.css
+++ b/src/components/Comment/CommentLine/index.css
@@ -1,5 +1,7 @@
 .comment-wrap {
     max-width: 85%;
+    margin-left: 2px;
+    background-color: rgb(237, 244, 245);
 }
 
 .reply-box {
@@ -19,3 +21,21 @@
     margin-top: 0
   }
   
+  .replyshow-btn {
+    position: relative;
+    width: 140px;
+    margin-left: 40px;
+    padding-left: 15px;
+  }
+
+  .edit-box {
+    width: 50px;
+    display: flex;
+    margin-left: -10px;
+    justify-content: center;
+    align-items: center;
+  }
+  .edit-btn {
+    scale: 0.9;
+    padding: 4px;
+  }
