--- a/src/components/Comment/ReplyComment/index.css
+++ b/src/components/Comment/ReplyComment/index.css
@@ -1,4 +1,3 @@
 .reply-comment {
   margin-bottom: -20px;
-  white-space: pre-wrap;
 }
